src/objects/Loan_Repayment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan__c</referenceTo>
        <relationshipLabel>Loan Repayments</relationshipLabel>
        <relationshipName>Loan_Repayments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sale</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipLabel>Loan Repayments</relationshipLabel>
        <relationshipName>Loan_Repayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Loan Repayment</label>
    <nameField>
        <displayFormat>LRN-{00000}</displayFormat>
        <label>Loan Repayment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Repayments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>